--- a/index.html
+++ b/index.html
@@ -68,37 +68,7 @@
         </div>
     </nav>
 
-    <!-- Banner Slider -->
-    <section class="banner-section active">
-        <div class="banner-slider">
-            <div class="banner-slide active" data-slide="0">
-                <div class="banner-overlay"></div>
-                <div class="banner-content">
-                    <h2>اكتشف عقارات أحلامك</h2>
-                    <p>أفضل العروض العقارية في المملكة العربية السعودية</p>
-                </div>
-            </div>
-            <div class="banner-slide" data-slide="1">
-                <div class="banner-overlay"></div>
-                <div class="banner-content">
-                    <h2>مزادات حية مباشرة</h2>
-                    <p>شارك في المزادات الإلكترونية واحصل على أفضل الصفقات</p>
-                </div>
-            </div>
-            <div class="banner-slide" data-slide="2">
-                <div class="banner-overlay"></div>
-                <div class="banner-content">
-                    <h2>بيع وإيجار بسهولة</h2>
-                    <p>منصة موثوقة لبيع وإيجار العقارات في جميع أنحاء المملكة</p>
-                </div>
-            </div>
-        </div>
-        <div class="banner-indicators">
-            <span class="indicator active" data-indicator="0"></span>
-            <span class="indicator" data-indicator="1"></span>
-            <span class="indicator" data-indicator="2"></span>
-        </div>
-    </section>
+
 
 
 
@@ -107,6 +77,42 @@
 
         <!-- Home Section: Featured Properties -->
         <section id="home-section" class="tab-section active">
+
+
+            <!-- Banner Slider -->
+            <section class="banner-section">
+                <div class="banner-slider">
+                    <div class="banner-slide active" data-slide="0">
+                        <div class="banner-overlay"></div>
+                        <div class="banner-content">
+                            <h2>اكتشف عقارات أحلامك</h2>
+                            <p>أفضل العروض العقارية في المملكة العربية السعودية</p>
+                        </div>
+                    </div>
+                    <div class="banner-slide" data-slide="1">
+                        <div class="banner-overlay"></div>
+                        <div class="banner-content">
+                            <h2>مزادات حية مباشرة</h2>
+                            <p>شارك في المزادات الإلكترونية واحصل على أفضل الصفقات</p>
+                        </div>
+                    </div>
+                    <div class="banner-slide" data-slide="2">
+                        <div class="banner-overlay"></div>
+                        <div class="banner-content">
+                            <h2>بيع وإيجار بسهولة</h2>
+                            <p>منصة موثوقة لبيع وإيجار العقارات في جميع أنحاء المملكة</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="banner-indicators">
+                    <span class="indicator active" data-indicator="0"></span>
+                    <span class="indicator" data-indicator="1"></span>
+                    <span class="indicator" data-indicator="2"></span>
+                </div>
+            </section>
+
+
+
             <div class="section-content">
                 <!-- Auction Cards Section -->
                 <div id="auctions-section" class="home-subsection">
@@ -147,12 +153,11 @@
 
         <!-- Profile Section: Menu and Account Info -->
         <section id="profile-section" class="tab-section">
-            <!-- Headers will be dynamically inserted here -->
-            <div id="profile-section-headers"></div>
-
             <div class="section-content">
+                <!-- Headers will be dynamically inserted here -->
+                <div id="profile-section-headers"></div>
                 <!-- Profile Menu View -->
-                <div id="profile-menu-view" class="profile-view active">
+                <div id="profile-menu-view" class="profile-view scrollable-container active">
                     <div class="profile-container">
                         <!-- Profile Header Component will be rendered here -->
                         <div id="profile-header-container"></div>
